# CIDRE

./: README.md  meson.build
src/: Cidr.vala  main.vala  meson.build
tests/: meson.build  tests.vala
